created simple page

--- a/second.html
+++ b/second.html
@@ -1,8 +1,29 @@
 <html>
 <head>
-    <body>
-        <h1>Stackroute</h1>
-    <p>Bharath</p>
+    <link rel="stylesheet" href="second.css">
+    </head>
+    
+        <header>
+            <div class="one">
+            </div>
+            <h1>Bharath</h1>
+            
+        </header>
+        <body>
+            <div class="three">
+        <button type="button">Sukka</button>
+        </div>
+        <div class="four">
+            <button type="button">Bharath</button>
+            </div>
+            <div class="five">
+                <button type="button">Yadav</button>
+                </div>
     </body>
-</head>
+    <footer>
+        <div class="two">
+
+        </div>
+    </footer>
+
 </html>
